--- a/booru/templates/booru/upload.html
+++ b/booru/templates/booru/upload.html
@@ -59,23 +59,14 @@
                     'X-CSRFToken': csrftoken  // CSRF 토큰 추가
                 },
                 success: function(response) {
-                    // 예측된 태그를 받아옴
+                    // Get predicted tag
                     var predictedTag = response.predicted_label;
                     
-                    // 기존의 tagsinput 요소를 선택
-                    var tagsInput = $('#id_tags_tagsinput');
-
-                    // 새로운 태그를 동적으로 생성
-                    var newTag = `<span class="tag"><span>${predictedTag}&nbsp;&nbsp;</span><a href="#" title="Removing tag">x</a></span>`;
+                    // Get the tags input element
+                    var $tagsInput = $('#id_tags');
                     
-                    // 태그를 tagsinput에 추가
-                    tagsInput.find('#id_tags_addTag').before(newTag);
-
-                    // 추가된 태그를 제거하는 기능도 추가 (x 클릭 시 태그 제거)
-                    tagsInput.find('.tag a').click(function(e) {
-                        e.preventDefault();
-                        $(this).parent().remove();  // 클릭된 태그(span) 제거
-                    });
+                    // Add the tag using jQuery Tags Input's addTag method
+                    $tagsInput.addTag(predictedTag);
                 },
                 error: function(xhr, status, error) {
                     console.log(error);  // 오류 로그 출력
@@ -220,7 +211,7 @@
                 {% endif %}
                 {% endif %}
                 {% endfor %}
-		        <button type="submit" name="action" value="upload" class="btn btn-primary btn-lg float-right">Post</button>
+		        <button type="submit" name="action" value="post" class="btn btn-primary btn-lg float-right">Post</button>
                 <button type="button" id="predict-button" class="btn btn-secondary btn-lg float-right mr-2">Predict</button>
             </form>
         </div>
